2015-12-13  Alexandre Oliva <aoliva@redhat.com>

	PR debug/67355
	* var-tracking.c (reverse_op): Don't add dummy zero to reverse
	ops that simplify back to the original value.
	* alias.c (refs_newer_value_p): Cut off recursion for
	expressions containing the original value.

2015-12-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/68376
	PR rtl-optimization/68670
	* ifcvt.c (noce_try_abs): For one_cmpl allow < 0, >= 0
	or > -1 conditions regardless of negate, and disallow
	all other conditions.

2015-12-10  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline
	2015-12-09  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/rs6000/freebsd64.h: Remove the redefinition of WCHAR_TYPE.

2015-12-10  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2015-12-08  Uros Bizjak  <ubizjak@gmail.com>

	PR target/68701
	* config/i386/i386.c (ix86_option_override_internal): Enable
	-maccumulate-outgoing-args when %ebp is fixed due to stack
	realignment requirements.

2015-12-10  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r231224.
	2015-12-03  Ilya Enkovich  <enkovich.gnu@gmail.com>

	* cfgexpand.c (expand_gimple_stmt_1): Return statement with
	DECL as return value is allowed to have NULL bounds.

2015-12-10  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2015-04-30  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/65948
	* ipa-devirt.c (odr_types_equivalent_p): NULLPTR_TYPE is equivalent
	to itself.

2015-12-09  John David Anglin  <danglin@gcc.gnu.org>

	PR target/68729
	* config/pa/pa.c (pa_emit_move_sequence): Don't check that mode is
	consistent with modes of the input and output operands when doing
	reloads to and from floating point registers.  Do reload for all
	address forms.

2015-12-09  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2015-12-09  Martin Liska  <mliska@suse.cz>

	PR ipa/68790
	* ipa-icf.c (sem_function::param_used_p): Return true
	if ipa_node_params_sum equals to NULL.
